Change ArrayList to LinkedList